// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test sidemenu reducer should handle menu change 1`] = `
Object {
  "classroom": "",
  "exams": "",
  "graphs": "",
  "home": "",
  "settings": "",
  "students": "#1dbb90",
}
`;

exports[`test sidemenu reducer should use default state 1`] = `
Object {
  "classroom": "",
  "exams": "",
  "graphs": "",
  "home": "#1dbb90",
  "settings": "",
  "students": "",
}
`;
